--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,12 @@
 
     <groupId>com.daemon</groupId>
     <artifactId>javaDemo</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>logbackDemo</module>
+        <module>nettyDemo</module>
+    </modules>
 
     <dependencies>
         <dependency>
